resample db data

--- a/Movie_catalog_react/Properties/launchSettings.json
+++ b/Movie_catalog_react/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "launchUrl": "",
+      "launchUrl": "http://localhost:3000",
       "applicationUrl": "http://localhost:20674",
       "sslPort": 0
     }
@@ -13,7 +13,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "",
+      "launchUrl": "http://localhost:3000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
